...

        <EditText
            android:id="@+id/event_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/event_location_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
        <!--    Date    -->
        <EditText
            android:id="@+id/date_picker_DD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/date_picker_MM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/date_picker_YY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

                <Switch
                    android:id="@+id/repeating_event_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                <!--    Time    -->
                <EditText
                    android:id="@+id/time_picker_hh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/time_picker_mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/contact_num"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regstart_date_picker_DD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regstart_date_picker_MM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regstart_date_picker_YY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regend_date_picker_DD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regend_date_picker_MM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/regend_date_picker_YY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/max_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/waiting_list_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

            <Switch
                android:id="@+id/geolocation_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:background="@drawable/mybutton"
            android:fontFamily="@font/belanosima"
            android:text="Save"
            android:textColor="@color/bonus_yellow"/>

...
