<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textColor="@color/text_cyan"
        android:layout_marginTop="70dp"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/placeholderpfp"
            android:contentDescription="@string/profile_picture" />

        <EditText
            android:id="@+id/profile_user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:hint="@string/your_name"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:fontFamily="@font/anybody_light"
            android:backgroundTint="@color/text_cyan"
            android:textColor="@color/text_cyan"
            android:maxLength="50" />

        <EditText
            android:id="@+id/profile_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:hint="@string/email_address"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:fontFamily="@font/anybody_light"
            android:backgroundTint="@color/text_cyan"
            android:textColor="@color/text_cyan"
            android:maxLength="50"/>

        <EditText
            android:id="@+id/profile_user_contact_number"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_cyan"
            android:ems="12"
            android:fontFamily="@font/anybody_light"
            android:hint="@string/contact_number"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:textColor="@color/text_cyan"
            android:maxLength="11"
            android:inputType="number"/>

        <EditText
            android:id="@+id/profile_user_address"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_cyan"
            android:ems="12"
            android:fontFamily="@font/anybody_light"
            android:hint="@string/address"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:textColor="@color/text_cyan"
            android:maxLength="50"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAlignment="textStart"
                android:backgroundTint="@color/text_cyan"
                android:ems="12"
                android:fontFamily="@font/aleo_medium"
                android:textSize="18dp"
                android:text="@string/for_organizers"
                android:textColor="@color/text_cyan"/>

            <Switch
                android:id="@+id/profile_facility_toggle_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:thumbTint="@color/accent_pink"
                android:trackTint="@color/accent_pink"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>


        <EditText
            android:id="@+id/profile_facility_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:hint="@string/facility_name"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:fontFamily="@font/anybody_light"
            android:backgroundTint="@color/text_cyan"
            android:visibility="gone"
            android:textColor="@color/text_cyan"
            android:maxLength="50"/>

        <EditText
            android:id="@+id/profile_facility_location"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_cyan"
            android:ems="12"
            android:fontFamily="@font/anybody_light"
            android:hint="@string/facility_location"
            android:textAlignment="center"
            android:textColorHint="@color/text_cyan"
            android:visibility="gone"
            android:textColor="@color/text_cyan"
            android:maxLength="50"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
            <Button
                android:id="@+id/profile_save_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/belanosima"
                android:text="Save"
                android:background="@drawable/mybutton"/>

            <Button
                android:id="@+id/profile_delete_facility_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/belanosima"
                android:text="Delete Facility"
                android:visibility="gone"
                android:background="@drawable/mybutton"/>
    </LinearLayout>

        <Button
            android:id="@+id/profile_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/belanosima"
            android:text="Back"
            android:background="@drawable/mybutton"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>