...
    <group android:checkableBehavior="single">
       <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_screen"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/your_profile" />
        <item
            android:id="@+id/nav_metrics"
            android:icon="@drawable/ic_user_metrics"
            android:title="@string/user_metrics" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_myevents"
            android:icon="@drawable/my_events"
            android:title="@string/menu_myevents"
            android:visible="false"/>
        <item
            android:id="@+id/nav_registered"
            android:icon="@drawable/registered_events"
...
